# evosax

./: .codecov.yml  .gitignore  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/: MANIFEST.in
.github/workflows/: pypi_publish.yaml  run_tests.yaml
benchmarks/: cma_es_numpy.py  cma_es_tpu_colab.ipynb  cpu_speed.npy  gpu_rtx2080ti_speed.npy  gpu_tesla_k40_speed.npy  speed_accelerator.py
benchmarks/results/: cpu_speed_jit.npy  cpu_speed_no_jit.npy  gpu_rtx2080ti_speed_no_jit.npy  gpu_tesla_k40_speed_jit.npy
docs/: todo.md
evosax/: __init__.py  strategy.py  types.py
evosax/algorithms/: __init__.py  base.py
evosax/algorithms/distribution_based/: __init__.py  ars.py  asebo.py  base.py  bipop_cma_es.py  cma_es.py  cr_fm_nes.py  des.py  discovered_es.py  esmc.py  evotf_es.py  gld.py  gradientless_descent.py  guided_es.py  hill_climber.py  hill_climbing.py  iamalgam_full.py  iamalgam_univariate.py  ipop_cma_es.py  learned_es.py  les.py  lm_ma_es.py  ma_es.py  noise_reuse_es.py  open_es.py  persistent_es.py  pes.py  pgpe.py  random_search.py  rm_es.py  sep_cma_es.py  (+7 more)
evosax/core/: __init__.py  fitness.py  fitness_shaping.py  kernel.py  optimizer.py  reshape.py  restart.py
evosax/learned_eo/: les_tools.py  lga_tools.py
evosax/learned_evolution/: fitness_shaping.py  les_tools.py  lga_tools.py
evosax/networks/: __init__.py  cnn.py  hyper_networks.py  lstm.py  mlp.py  shared.py
evosax/problems/: __init__.py  bbob.py  bbob_helpers.py  bbob_noise.py  bernoulli_bandit.py  cartpole.py  classic.py  control_brax.py  control_gym.py  gymnax.py  low_d.py  low_d_optimisation.py  meta_bbob.py  meta_problem.py  modified_ant.py  networks.py  obs_norm.py  pendulum.py  problem.py  sequence.py  supervised.py  vision.py
evosax/restarts/: __init__.py  bipop_restart.py  ipop_restart.py  restart_conds.py  restarter.py  simple_restart.py  termination.py
evosax/strategies/: __init__.py  ars.py  asebo.py  augmented_rs.py  bipop_cma_es.py  cma_es.py  cr_fm_nes.py  de.py  des.py  differential_es.py  diffusion.py  esmc.py  evotf_es.py  fox.py  full_iamalgam.py  gaussian.py  gesmr_ga.py  gld.py  guided_es.py  hill_climber.py  iamalgam_full.py  iamalgam_indep.py  iamalgam_univariate.py  indep_iamalgam.py  ipop_cma_es.py  les.py  lga.py  lm_ma_es.py  ma_es.py  mr15_ga.py  noise_reuse_es.py  open_es.py  open_nes.py  pbt.py  pbt_es.py  pepg_es.py  persistent_es.py  pes.py  pgpe.py  pgpe_es.py  (+15 more)
evosax/subpops/: __init__.py  batch.py  meta.py  protocol.py
evosax/utils/: __init__.py  eigen_decomp.py  es_logger.py  evojax_wrapper.py  helpers.py  kernel.py  learned_eo.py  les_tools.py  lga_tools.py  optimizer.py  reshape_fitness.py  reshape_params.py  visualizer_2d.py
evosax/v2/: __init__.py  distributed.py  open_es.py  pgpe.py  sep_cma_es.py  snes.py
evosax/visualize/: __init__.py  animate_gym.py  animate_toy.py  plot_log.py
examples/: 00_getting_started.ipynb  01_bbob.ipynb  01_bbob_visualizer.ipynb  01_classic_benchmark.ipynb  02_brax.ipynb  02_mlp_control.ipynb  02_rl.ipynb  03_cnn_mnist.ipynb  03_vision.ipynb  04_lrate_pes.ipynb  04_mlp_pes.ipynb  04_restart_es.ipynb  05_diffusion_evolution.ipynb  05_quadratic_pbt.ipynb  06_restart_es.ipynb  06_sv_es.ipynb  07_brax_control.ipynb  07_lrate_pes.ipynb  07_persistent_es.ipynb  08_bbo_visualizer.ipynb  08_encodings.ipynb  08_multi_gpu.ipynb  08_parallelization.ipynb  09_exp_batch_es.ipynb  09_pmap_strategy.ipynb  10_diffusion_evolution.ipynb  cma_config.json  ffw_pendulum.py  gen_150.npy  getting_started.ipynb  mnist_cnn_nes.py  run_cma_es.py
examples/experimental/: 08_encodings.ipynb  09_subpop_es.ipynb
notebooks/: 01_gaussian_low_d.ipynb  02_cma_es_control.ipynb  03_nes_cnn.ipynb  04_cma_es_rnn.ipynb  gym_visualizer.ipynb  meta_rnn_cma_es.ipynb  optimisation_cma_es.ipynb  optimisation_gaussian.ipynb  pendulum_cma_es.ipynb  pendulum_log.pkl  quadratic_open_nes.ipynb  visualize_benchmarks.ipynb  xx_logger_anim.ipynb
tests/: conftest.py  test_decodings.py  test_es_log.py  test_fitness_rollout.py  test_fitness_shaping.py  test_network_wrapper.py  test_networks.py  test_param_decode.py  test_param_reshape.py  test_reshape.py  test_strategy.py  test_strategy_api.py  test_strategy_batch.py  test_strategy_restarts.py  test_strategy_run.py
tests/test_algorithms/: test_distribution_based.py  test_population_based.py
tests/test_core/: test_fitness_shaping.py  test_kernel.py  test_optimizer.py
tests/test_problems/: test_bbob.py  test_networks.py  test_rl.py  test_vision.py
(+62 files in other folders)
