[project]
name = "evosax"
version = "0.2.0"
dependencies = [
	"numpy>=1.25",
	"jax>=0.5.0",
	"flax>=0.10.0",
	"dotmap",
	"matplotlib",
]
requires-python = ">=3.10"
authors = [
  { name="Robert Tjarko Lange", email="robertlange0@gmail.com" },
]
description = "Evolution Strategies in JAX"
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["evolution-strategy", "evolutionary-algorithms", "neuroevolution"]
classifiers = [
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"License :: OSI Approved :: Apache Software License",
	"Operating System :: OS Independent",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.setuptools]
license-files = []

[tool.setuptools.packages.find]
where = ["."]
include = ["evosax*"]

[tool.setuptools.package-data]
evosax = [
	"algorithms/ckpt/les/*.pkl",
	"algorithms/ckpt/lga/*.pkl",
	"algorithms/ckpt/evotf/*.pkl"
]