[project]
name = "evosax"
version = "0.2.0"
dependencies = [
	"numpy>=1.25",
	"jax>=0.5.0",
	"flax>=0.10.0",
	"dotmap",
	"matplotlib",
]
requires-python = ">=3.10"
authors = [
  { name="Robert Tjarko Lange", email="robertlange0@gmail.com" },
]
description = "Evolution Strategies in JAX"
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["evolution-strategy", "evolutionary-algorithms", "neuroevolution"]
classifiers = [
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"License :: OSI Approved :: Apache Software License",
	"Operating System :: OS Independent",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.3.2",
	"pytest-cov>=5.0.0",
	"ruff>=0.6.4",
	"mypy>=1.11.2",
]
examples = [
	"torch",
	"torchvision",
	"brax",
	"gymnax",
	"mediapy",
	"ipywidgets",
	"ipykernel",
]

[project.urls]
Homepage = "https://github.com/RobertTLange/evosax"

[tool.setuptools.packages.find]
where = ["."]
include = ["evosax*"]

[tool.setuptools.package-data]
evosax = [
	"algorithms/ckpt/les/*.pkl",
	"algorithms/ckpt/lga/*.pkl",
	"algorithms/ckpt/evotf/*.pkl"
]

[tool.ruff]
src = ["evosax", "tests"]
target-version = "py311"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "N", "SIM", "UP", "W"]
ignore = ["N801", "N802", "N803", "N806", "N815", "W191"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.setuptools]
license-files = []